oxiplate-derive/tests/config/crates/unexpected-escape-sequence-unclosed-string/tests/broken/unexpected-escape-sequence-unclosed-string.stderr
error: Failed to parse `/oxiplate.toml`: End of file encountered while parsing basic string
 --> tests/broken/unexpected-escape-sequence-unclosed-string.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
